[Develop]Develop count down timer, add database

--- a/Shaking/res/values/strings.xml
+++ b/Shaking/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <!-- Main -->
+    <string name="main_shaking_count_down">Start shaking in</string>
+    <string name="main_set_alarm">Set Alarm</string>
+    <string name="main_cancel_alarm">Cancel Alarm</string>
+    <string name="main_add_an_alarm_to_shake">Add an alarm to Shake!</string>
+    
+    
+    <!-- Alarm Dialog -->
+    <string name="alarm_dialog_time_to_do_some_excercise">Time to do some excercise!!!</string>
+    <string name="alarm_dialog_ok">OK</string>
+    <string name="alarm_dialog_later">Later</string>
+
 </resources>
