[UI] Update UI: dialog, select place, video, video resource

--- a/Shaking/res/values/strings.xml
+++ b/Shaking/res/values/strings.xml
@@ -11,13 +11,14 @@
     <string name="main_cancel_alarm">Cancel Alarm</string>
     <string name="main_add_an_alarm_to_shake">Add an alarm to Shake!</string>
     <string name="main_shake_now">Shake now!</string>
-        <string name="main_go">Go</string>
-    
-    
+    <string name="main_go">Go</string>
+
     <!-- Alarm Dialog -->
     <string name="alarm_dialog_time_to_do_some_excercise">Time to do some excercise!!!</string>
     <string name="alarm_dialog_ok">OK</string>
     <string name="alarm_dialog_later">Later</string>
+    <string name="alarm_dialog_do_some_exercise">Do some excercise!</string>
+    
 
     <!-- Intent -->
     <string name="intent_filter_action_shaking">INTENT_FILTER_SHAKING</string>
@@ -27,12 +28,12 @@
 
     <!-- Select Activity -->
     <string name="select_select_a_position">Select a place !</string>
+    <string name="select_head">Head</string>
     <string name="select_hand">Hand</string>
-    <string name="select_leg">Leg</string>
-    <string name="select_body">Body</string>
-    
+    <string name="select_waist">Waist</string>
+    <string name="select_foot">Foot</string>
+
     <!-- Youtube -->
     <string name="youtube_error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
-    
 
 </resources>
